# mindflow

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CUSTOM_GPT_SETUP.md  Caddyfile  DEPLOYMENT.md  LICENSE  MVP-REVIEW-FINDINGS.md  Makefile  README.md  TESTING.md  backend-review.md  docker-compose.prod.yml  pyproject.toml
.github/workflows/: deploy.yml
backend/: .dockerignore  .env.example  .env.production.example  DEPLOYMENT-SUMMARY.md  Dockerfile  IMPLEMENTATION-AUDIT.md  MCP_README.md  Makefile  NEXT-STEPS.md  PROJECT-COMPLETE.md  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/.github/workflows/: deploy.yml
backend/alembic/: env.py
backend/alembic/versions/: 67543c0e8517_initial_schema_from_phase_1_4.py  a93b088988d2_initial_complete_schema_with_auth_tables.py  d528aa1e9317_add_oauth_tables.py
backend/app/: config.py  dependencies.py  logging_config.py  main.py
backend/app/api/: auth.py  health.py  tasks.py
backend/app/auth/: __init__.py  schemas.py  security.py  service.py
backend/app/db/: crud.py  database.py  models.py  redis.py
backend/app/middleware/: __init__.py  rate_limit.py  request_logging.py
backend/app/monitoring/: __init__.py  sentry.py
backend/app/oauth/: __init__.py  authorize.py  crud.py  csrf.py  discovery.py  jwks.py  jwt.py  models.py  register.py  schemas.py  token.py
backend/app/oauth/templates/: consent.html
backend/app/schemas/: task.py
backend/app/services/: email_service.py  posthog_analytics.py  scoring.py
backend/deployment/: README.md  env.production.template  migrate-db.sh  mindflow.service  monitor.sh  nginx.conf  setup.sh
backend/docs/: APPS-SDK-REVIEW.md  CHATGPT-CONNECTION-GUIDE.md  DEPLOYMENT-GUIDE.md  MCP_SERVER.md  PHASE-9B-VALIDATION.md  PLAN.md
backend/mcp_server/: __init__.py  auth.py  component_loader.py  config.py  main.py  renderer.py
backend/mcp_server/assets/: taskcard.js  taskwidget.js
backend/mcp_server/tools/: __init__.py  tasks.py
backend/tests/: conftest.py
backend/tests/api/: test_auth_api.py  test_health.py  test_task_scoring.py  test_task_scoring_examples.py  test_tasks_api.py
backend/tests/auth/: __init__.py  test_auth_service.py  test_password_reset.py  test_refresh_tokens.py  test_security.py
backend/tests/db/: test_redis.py
backend/tests/integration/: test_database.py
backend/tests/mcp_server/: test_auth.py  test_component_loader.py  test_renderer.py  test_tasks_integration.py  test_tasks_tool.py
backend/tests/middleware/: test_rate_limit.py  test_request_logging.py
backend/tests/monitoring/: __init__.py  test_sentry.py
backend/tests/oauth/: TEST_ISSUES.md  __init__.py  test_authorize.py  test_csrf.py  test_discovery.py  test_jwks.py  test_jwt.py  test_register.py  test_token.py
backend/tests/schemas/: test_task_validation.py
backend/tests/services/: test_scoring.py  test_scoring_performance.py
deployment/: README.md  env.production.template  migrate-db.sh  mindflow.service  monitor.sh  nginx.conf  setup.sh
docs/: APPS-SDK-SETUP.md  APPS-SDK-STATUS.md  ARCHITECTURE.md  CHATGPT-APPS-SDK-INTEGRATION.md  CUSTOM-GPT-MIGRATION.md  DEPLOYMENT.md  IMPLEMENTATION.md  PHASE2-PLAN-V2.md  PHASE2-PLAN.md  PHASE3-PLAN.md  PHASE4-PLAN.md  PLAN.md  PRODUCT.md  README.md  TDD-PLAN.md  project-brief.md
docs/archive/: README.md  build-plan-bootstrap.md  custom-views-todoist-ui.md  mindflow-checklist.md  mindflow-summary.md  production-fastapi-lit.md
docs/raw/: architecture-1pager.md  mindflow-spec.md  mindflow-starter.md  turn-to-product.md
frontend/: .gitignore  APPS_SDK_README.md  CHATGPT_APPS_SDK_IMPLEMENTATION.md  DEPLOYMENT-CHECKLIST.md  IMPLEMENTATION-SUMMARY.md  QUICKSTART.md  README.md  build-and-deploy.sh  build.js  example.html  index.html  package.json  tsconfig.json  validate.sh  vitest.config.ts
frontend/src/: index.tsx
frontend/src/components/: TaskCard.tsx  TaskWidget.test.tsx  TaskWidget.tsx
frontend/src/hooks/: index.ts  useOpenAI.ts  useWidgetState.ts
frontend/src/sdk/: AppsSDK.test.ts  AppsSDK.ts
frontend/src/types/: Task.ts  openai.ts
frontend/src/utils/: dateFormat.ts  priorityColors.ts
src/gas/: Code.gs  appsscript.json  openapi-schema-gpt.json
tests/: README.md  __init__.py  client.py  conftest.py  factories.py  seed_data.py  test_api_endpoints.py  test_edge_cases.py
tests/frontend/: landing-page.spec.js
